Fix text wrapping on alerts

--- a/src/app/display/display/display.component.scss
+++ b/src/app/display/display/display.component.scss
@@ -134,7 +134,7 @@
     text-align: center;
   }
   .display-alert-content {
-    white-space: pre;
+    white-space: pre-line;
     font-size: 40px;
   }
 }
